SDI-TU_ID_GIT-5.3-PO NavView.